# energa24-api

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
energa/: __init__.py  _helpers.py  client.py  exceptions.py  mcp_server.py  models.py  sync.py
scripts/: smoke_test.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_helpers.py  test_mcp_server.py  test_models.py
tests/fixtures/: balance.json  dashboard.json  invoices.json  token_response.json
